fix(empty-state): Remove z-index to allow undo toast to work

--- a/static/components/empty-list-state.less
+++ b/static/components/empty-list-state.less
@@ -8,7 +8,6 @@
   top: 0;
   right: 0;
   bottom: 0;
-  z-index: 1002;
   overflow:hidden;
 
   > div {
